@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'com.diffplug.spotless' version '8.4.0'
+    id 'me.champeau.jmh' version '0.7.2'
 }
 
 
@@ -19,9 +20,17 @@ dependencies {
     testAnnotationProcessor libs.lombok
     testImplementation platform(libs.junit.bom)
     testImplementation libs.junit.jupiter
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testRuntimeOnly libs.junit.platform.launcher
     implementation libs.slf4j.api
     runtimeOnly libs.logback.classic
+    implementation libs.agrona
+    implementation libs.disruptor
+    testImplementation libs.jmh.core
+    testImplementation libs.jmh.generator.annprocess
+    jmh libs.jmh.core
+    jmh libs.jmh.generator.annprocess
+    testImplementation libs.guava
+    testImplementation libs.hdrhistogram
 }
 
 spotless {
@@ -33,4 +42,8 @@ spotless {
 
 test {
     useJUnitPlatform()
+    jvmArgs = [
+            '--add-opens', 'java.base/jdk.internal.misc=ALL-UNNAMED',
+            '--add-opens', 'java.base/jdk.internal.util=ALL-UNNAMED'
+    ]
 }
